# covid-data-analysis

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
notebook/: DataExploration.ipynb  DataModeling.ipynb
src/covid_modeling/: io.py  modeling.py
tests/: test_io.py  test_modeling.py
tests/resources/: encounters.csv  patients.csv
